# claude-team-cost-optimizer

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/commands/: seat-analysis.md
.github/workflows/: ci.yml
examples/: generate_sample_data.py
examples/input/code-analytics/: cc_2026-06.csv
examples/input/members/: members_2026-06.csv
examples/input/org-a/: members-info.csv
examples/input/org-a/spend/: spend_2026-05.csv  spend_2026-06.csv
examples/input/org-b/: members-info-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-05.csv  members-info-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-16.csv
examples/input/org-b/code-analytics/: code-analytics-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-05.csv  code-analytics-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-16.csv
examples/input/org-b/members/: members-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-05.csv  members-0b1c2d3e-4f56-4789-a012-3456789abcde-2026-07-16.csv  members_2026-06.csv  members_2026-07.csv
examples/input/org-b/spend/: spend_2026-05.csv  spend_2026-06.csv  (+3 more)
examples/input/spend/: spend_2026-05.csv  spend_2026-06.csv
src/seat_analyzer/: __init__.py  analyze.py  cli.py  config.py  ingest.py  pricing.py  report.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_code_diff.py  test_credit_limits.py  test_detail_usage.py  test_filenames.py  test_hardening.py  test_ingest.py  test_member_changes.py  test_members_info.py  test_members_info_snapshots.py  test_preview.py  test_pricing.py  test_snapshot_diff.py  test_trend.py  test_unassigned.py
