[project]
name = "seat-analyzer"
version = "0.1.0"
description = "Claude Team プランのシート最適化分析ツール（Standard/Premium 損益分岐）"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
seat-analyzer = "seat_analyzer.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seat_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
